--- a/.gitignore
+++ b/.gitignore
@@ -165,16 +165,9 @@ data/baseline_data_netherlands.csv
 data/baseline_data_holland.csv
 data/experiment_hill_climber_grid_search_netherlands.csv
 data/experiment_hill_climber_grid_search_holland.csv
-data/annealing/experiment_annealing_grid_search_holland_exponential_100.csv
-data/annealing/experiment_annealing_grid_search_holland_exponential_200.csv
-data/annealing/experiment_annealing_grid_search_holland_exponential_500.csv
-data/annealing/experiment_annealing_grid_search_holland_lineair_100.csv
-data/annealing/experiment_annealing_grid_search_holland_lineair_200.csv
-data/annealing/experiment_annealing_grid_search_holland_lineair_500.csv
-data/annealing/experiment_annealing_grid_search_holland_logaritmic_100.csv
-data/annealing/experiment_annealing_grid_search_holland_logaritmic_200.csv
-data/annealing/experiment_annealing_grid_search_holland_logaritmic_500.csv
-data/hill_climber/experiment_hill_climber_grid_search_holland.csv
+data/annealing/
+data/hill_climber/ 
+data/hill_climber_restart/
 
 test_state.py
 test.py
